# ico-creator

./: CMakeLists.txt
include/: basic.h  ico.h
lib/: libopencv_highgui.so.4.5.5  libopencv_imgcodecs.so.4.5.5
src/: ico.cpp  main.cpp
