CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT("ico creator")

SET(SRC
    "${PROJECT_SOURCE_DIR}/src/ico.cpp"
    "${PROJECT_SOURCE_DIR}/src/main.cpp"
)

ADD_EXECUTABLE(icocreator ${SRC})

TARGET_INCLUDE_DIRECTORIES(icocreator
    PRIVATE
        "${PROJECT_SOURCE_DIR}/include"
        "${OpenCV_INCLUDE_DIRS}"
)

FIND_PACKAGE(OpenCV REQUIRED)
# MESSAGE(STATUS "OpenCV_INCLUDE_DIRS="${OpenCV_INCLUDE_DIRS})
# MESSAGE(STATUS "OpenCV_LIBRARIES="${OpenCV_LIBRARIES})

IF(OpenCV_FOUND)
    TARGET_LINK_LIBRARIES(icocreator
        PRIVATE
            ${OpenCV_LIBRARIES}
    )
ELSE()
    MESSAGE(FATAL_ERROR " opencv not found!")
ENDIF()